Fix spacing for cards

--- a/css/paragraphs-aplenty.css
+++ b/css/paragraphs-aplenty.css
@@ -169,7 +169,7 @@
 /**
  * Cards
  */
-.aplenty-cards>.content {
+.aplenty-cards > .content {
   padding-top: var(--spacer);
   padding-bottom: var(--spacer);
 }
@@ -180,19 +180,19 @@
 }
 .aplenty-card > .content {
   width: 100%;
-  margin: var(--spacer) 0;
-  padding: 0 0 var(--spacer) 0;
   background-color: #fff;
+}
+.aplenty-card-background {
+  background-color: #f2f2f2;
+}
+.aplenty-cards.aplenty-card-border > .content,
+.aplenty-cards.aplenty-card-background > .content {
+  padding: var(--spacer);
 }
 .aplenty-card-border .aplenty-card > .content {
   border-radius: 0.25rem;
+  padding: var(--spacer);
   border: 1px solid #ddd;
-}
-.aplenty-card-background > .content {
-  background-color: #f2f2f2;
-}
-.aplenty-card-background .aplenty-card > .content {
-  border-radius: 0.25rem;
 }
 
 .aplenty-card img {
