--- a/paragraphs_aplenty_classy/css/paragraphs-aplenty-classy-spacing.css
+++ b/paragraphs_aplenty_classy/css/paragraphs-aplenty-classy-spacing.css
@@ -38,21 +38,6 @@
 }
 
 /**
- * Resets
- */
-.aplenty-accordion>.content,
-.aplenty-grid>.content,
-.aplenty-media_list>.content,
-.aplenty-cards>.content {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-.aplenty-grid>.content {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-/**
  * Width
  */
 .pa--w-tiny>.content {
@@ -125,13 +110,6 @@
   float: none;
   width: auto;
   margin-left: 0;
-}
-.paragraphs-item>.content .paragraphs-item::not([class*="pa--b-"])>.content,
-.paragraphs-item>.content .paragraphs-item>.content .paragraphs-item::not([class*="pa--b-"])>.content {
-  padding-right: 0;
-  padding-left: 0;
-  padding-top: 0;
-  padding-bottom: 0;
 }
 
 /**
